test/files/neg/t5189_inferred.check
t5189_inferred.scala:7: error: type mismatch;
 found   : Nil.type
 required: ?A1 where type ?A1
  f(Invariant(arr): Covariant[Any])(0) = Nil
                                         ^
1 error
